corpus/tests.txt
==================
Divisible by
==================
{% if loop.index is divisible by(3) %}
  ...
{% endif %}
---
(template
  (if
    (binary_expression
      (member_expression
        (variable)
        (property))
      (call_expression
        (function)
        (arguments
          (number))))
    (source_elements
      (content))))

==================
Same as
==================
{% if foo.attribute is same as(false) %}
  ...
{% endif %}
---
(template
  (if
    (binary_expression
      (member_expression
        (variable)
        (property))
      (call_expression
        (function)
        (arguments
          (boolean))))
    (source_elements
      (content))))

==================
Test: is even
==================
{% if variable is even %}
  ...
{% endif %}
---
(template
  (if
    (binary_expression
      (variable)
      (variable))
    (source_elements
      (content))))

==================
Test: is odd
==================
{% if variable is odd %}
  ...
{% endif %}
---
(template
  (if
    (binary_expression
      (variable)
      (variable))
    (source_elements
      (content))))

==================
Test: is defined
==================
{% if variable is defined %}
  ...
{% endif %}
---
(template
  (if
    (binary_expression
      (variable)
      (variable))
    (source_elements
      (content))))

==================
Test: is empty
==================
{% if variable is empty %}
  ...
{% endif %}
---
(template
  (if
    (binary_expression
      (variable)
      (variable))
    (source_elements
      (content))))

==================
Test: is iterable
==================
{% if variable is iterable %}
  ...
{% endif %}
---
(template
  (if
    (binary_expression
      (variable)
      (variable))
    (source_elements
      (content))))

==================
Test: is constant
==================
{% if variable is constant %}
  ...
{% endif %}
---
(template
  (if
    (binary_expression
      (variable)
      (variable))
    (source_elements
      (content))))

==================
Test: is null
==================
{% if variable is null %}
  ...
{% endif %}
---
(template
  (if
    (binary_expression
      (variable)
      (null))
    (source_elements
      (content))))
